# gemm

./: CMakeLists.txt  README.md  build.sh
bench/: bench_main.cpp
cpu/: gemm_naive.cpp
include/gemm/: gemm.hpp
